Fix for #328 and some warnings fixed