@@ -57,7 +57,7 @@ public class ArduinoManager {
     private static final String ARDUINO_AVR_BOARDS = "Arduino AVR Boards"; //$NON-NLS-1$
 
     public static final String LIBRARIES_URL = "http://downloads.arduino.cc/libraries/library_index.json"; //$NON-NLS-1$
-    public static final String EXAMPLE_PACKAGE = "examples_Arduino_1_6_7.zip";
+    public static final String EXAMPLE_PACKAGE = "examples_Arduino_1_6_7.zip"; //$NON-NLS-1$
     public static final String EXAMPLES_URL = "http://eclipse.baeyens.it/download/" + EXAMPLE_PACKAGE; //$NON-NLS-1$
     static private List<PackageIndex> packageIndices;
     static private LibraryIndex libraryIndex;
@@ -74,8 +74,7 @@ public class ArduinoManager {
     }
 
     /**
-     * Loads all stuff needed and if this is the first time downloads the avr
-     * boards and needed tools
+     * Loads all stuff needed and if this is the first time downloads the avr boards and needed tools
      * 
      * @param monitor
      */
@@ -90,8 +89,8 @@ public class ArduinoManager {
 		InstallLibraries(monitor);
 
 		// TODO add sample programs here please
-		downloadAndInstall(EXAMPLES_URL, EXAMPLE_PACKAGE,
-			Paths.get(ConfigurationPreferences.getInstallationPathExamples().toString()), false, monitor);
+		downloadAndInstall(EXAMPLES_URL, EXAMPLE_PACKAGE, Paths.get(ConfigurationPreferences.getInstallationPathExamples().toString()), false,
+			monitor);
 
 		// now add the boards
 		String platformName = ARDUINO_AVR_BOARDS;
@@ -116,8 +115,8 @@ public class ArduinoManager {
 
     private static void InstallLibraries(IProgressMonitor monitor) {
 	LibraryIndex libindex = getLibraryIndex();
-	String[] libraries = new String[] { "Ethernet", "Firmata", "GSM", "Keyboard", "LiquidCrystal", "Mouse", "SD",
-		"Servo", "Stepper", "TFT", "WiFi" };
+	String[] libraries = new String[] { "Ethernet", "Firmata", "GSM", "Keyboard", "LiquidCrystal", "Mouse", "SD", //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$ //$NON-NLS-4$ //$NON-NLS-5$ //$NON-NLS-6$ //$NON-NLS-7$
+		"Servo", "Stepper", "TFT", "WiFi" }; //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$ //$NON-NLS-4$
 	for (String library : libraries) {
 	    ArduinoLibrary toInstalLib = libindex.getLatestLibrary(library);
 	    if (toInstalLib != null) {
@@ -127,25 +126,22 @@ public class ArduinoManager {
     }
 
     /**
-     * Given a platform description in a json file download and install all
-     * needed stuff. All stuff is including all tools and core files and
-     * hardware specific libraries. That is (on windows) inclusive the make.exe
+     * Given a platform description in a json file download and install all needed stuff. All stuff is including all tools and core files and hardware
+     * specific libraries. That is (on windows) inclusive the make.exe
      * 
      * @param platform
      * @param monitor
      * @param object
      * @return
      */
-    static public IStatus downloadAndInstall(ArduinoPlatform platform, boolean forceDownload,
-	    IProgressMonitor monitor) {
+    @SuppressWarnings("resource")
+    static public IStatus downloadAndInstall(ArduinoPlatform platform, boolean forceDownload, IProgressMonitor monitor) {
 
-	IStatus status = downloadAndInstall(platform.getUrl(), platform.getArchiveFileName(), platform.getInstallPath(),
-		forceDownload, monitor);
+	IStatus status = downloadAndInstall(platform.getUrl(), platform.getArchiveFileName(), platform.getInstallPath(), forceDownload, monitor);
 	if (!status.isOK()) {
 	    return status;
 	}
-	MultiStatus mstatus = new MultiStatus(status.getPlugin(), status.getCode(), status.getMessage(),
-		status.getException());
+	MultiStatus mstatus = new MultiStatus(status.getPlugin(), status.getCode(), status.getMessage(), status.getException());
 
 	List<ToolDependency> tools = platform.getToolsDependencies();
 	// make a platform_plugin.txt file to store the tool paths
@@ -160,10 +156,8 @@ public class ArduinoManager {
 	    writer.println("#Jantje"); //$NON-NLS-1$
 	    writer.println();
 	} catch (FileNotFoundException | UnsupportedEncodingException e) {
-	    mstatus.add(
-		    new Status(
-			    IStatus.WARNING, Activator.getId(), Messages.ArduinoManager_unable_to_create_file
-				    + pluginFile + '\n' + platform.getName() + Messages.ArduinoManager_will_not_work,
+	    mstatus.add(new Status(IStatus.WARNING, Activator.getId(),
+		    Messages.ArduinoManager_unable_to_create_file + pluginFile + '\n' + platform.getName() + Messages.ArduinoManager_will_not_work,
 		    e));
 	}
 
@@ -186,8 +180,7 @@ public class ArduinoManager {
 	// On Windows install make from equations.org
 	if (Platform.getOS().equals(Platform.OS_WIN32)) {
 	    try {
-		Path makePath = Paths
-			.get(ConfigurationPreferences.getPathExtensionPath().append("make.exe").toString());
+		Path makePath = Paths.get(ConfigurationPreferences.getPathExtensionPath().append("make.exe").toString()); //$NON-NLS-1$
 		if (!makePath.toFile().exists()) {
 		    Files.createDirectories(makePath.getParent());
 		    URL makeUrl = new URL("ftp://ftp.equation.com/make/32/make.exe"); //$NON-NLS-1$
@@ -196,8 +189,7 @@ public class ArduinoManager {
 		}
 
 	    } catch (IOException e) {
-		mstatus.add(
-			new Status(IStatus.ERROR, Activator.getId(), Messages.ArduinoManager_Downloading_make_exe, e));
+		mstatus.add(new Status(IStatus.ERROR, Activator.getId(), Messages.ArduinoManager_Downloading_make_exe, e));
 	    }
 	}
 
@@ -224,8 +216,7 @@ public class ArduinoManager {
 	try {
 	    URL packageUrl = new URL(url.trim());
 	    String localFileName = Paths.get(packageUrl.getPath()).getFileName().toString();
-	    Path packagePath = Paths
-		    .get(ConfigurationPreferences.getInstallationPath().append(localFileName).toString());
+	    Path packagePath = Paths.get(ConfigurationPreferences.getInstallationPath().append(localFileName).toString());
 	    File packageFile = packagePath.toFile();
 	    if (!packageFile.exists() || download) {
 		packagePath.getParent().toFile().mkdirs();
@@ -258,8 +249,7 @@ public class ArduinoManager {
 	try {
 	    URL librariesUrl = new URL(LIBRARIES_URL);
 	    String localFileName = Paths.get(librariesUrl.getPath()).getFileName().toString();
-	    Path librariesPath = Paths
-		    .get(ConfigurationPreferences.getInstallationPath().append(localFileName).toString());
+	    Path librariesPath = Paths.get(ConfigurationPreferences.getInstallationPath().append(localFileName).toString());
 	    File librariesFile = librariesPath.toFile();
 	    if (!librariesFile.exists() || download) {
 		librariesPath.getParent().toFile().mkdirs();
@@ -284,8 +274,7 @@ public class ArduinoManager {
 	return libraryIndex;
     }
 
-    static public ArduinoBoard getBoard(String boardName, String platformName, String packageName)
-	    throws CoreException {
+    static public ArduinoBoard getBoard(String boardName, String platformName, String packageName) throws CoreException {
 	for (PackageIndex index : packageIndices) {
 	    ArduinoPackage pkg = index.getPackage(packageName);
 	    if (pkg != null) {
@@ -367,13 +356,10 @@ public class ArduinoManager {
     }
 
     /**
-     * downloads an archive file from the internet and saves it in the download
-     * folder under the name "pArchiveFileName" then extrats the file to
-     * pInstallPath if pForceDownload is true the file will be downloaded even
-     * if the download file already exists if pForceDownload is false the file
-     * will only be downloaded if the download file does not exists The
-     * extraction is done with processArchive so only files types supported by
-     * this method will be properly extracted
+     * downloads an archive file from the internet and saves it in the download folder under the name "pArchiveFileName" then extrats the file to
+     * pInstallPath if pForceDownload is true the file will be downloaded even if the download file already exists if pForceDownload is false the file
+     * will only be downloaded if the download file does not exists The extraction is done with processArchive so only files types supported by this
+     * method will be properly extracted
      * 
      * @param pURL
      *            the url of the file to download
@@ -384,8 +370,8 @@ public class ArduinoManager {
      * @param pMonitor
      * @return
      */
-    public static IStatus downloadAndInstall(String pURL, String pArchiveFileName, Path pInstallPath,
-	    boolean pForceDownload, IProgressMonitor pMonitor) {
+    public static IStatus downloadAndInstall(String pURL, String pArchiveFileName, Path pInstallPath, boolean pForceDownload,
+	    IProgressMonitor pMonitor) {
 	IPath dlDir = ConfigurationPreferences.getInstallationPathDownload();
 	IPath archivePath = dlDir.append(pArchiveFileName);
 	String archiveFullFileName = archivePath.toString();
@@ -393,7 +379,7 @@ public class ArduinoManager {
 	    URL dl = new URL(pURL);
 	    dlDir.toFile().mkdir();
 	    if (!archivePath.toFile().exists() || pForceDownload) {
-		pMonitor.subTask("Downloading " + pArchiveFileName + " ..");
+		pMonitor.subTask("Downloading " + pArchiveFileName + " .."); //$NON-NLS-1$ //$NON-NLS-2$
 		Files.copy(dl.openStream(), Paths.get(archivePath.toString()), StandardCopyOption.REPLACE_EXISTING);
 	    }
 	} catch (IOException e) {
@@ -402,13 +388,12 @@ public class ArduinoManager {
 	return processArchive(pArchiveFileName, pInstallPath, pForceDownload, archiveFullFileName, pMonitor);
     }
 
-    private static IStatus processArchive(String pArchiveFileName, Path pInstallPath, boolean pForceDownload,
-	    String pArchiveFullFileName, IProgressMonitor pMonitor) {
+    private static IStatus processArchive(String pArchiveFileName, Path pInstallPath, boolean pForceDownload, String pArchiveFullFileName,
+	    IProgressMonitor pMonitor) {
 	// Create an ArchiveInputStream with the correct archiving algorithm
 	String faileToExtractMessage = Messages.ArduinoManager_Failed_to_extract + pArchiveFullFileName;
 	if (pArchiveFileName.endsWith("tar.bz2")) { //$NON-NLS-1$
-	    try (ArchiveInputStream inStream = new TarArchiveInputStream(
-		    new BZip2CompressorInputStream(new FileInputStream(pArchiveFullFileName)))) {
+	    try (ArchiveInputStream inStream = new TarArchiveInputStream(new BZip2CompressorInputStream(new FileInputStream(pArchiveFullFileName)))) {
 		return extract(inStream, pInstallPath.toFile(), 1, pForceDownload, pMonitor);
 	    } catch (IOException | InterruptedException e) {
 		return new Status(IStatus.ERROR, Activator.getId(), faileToExtractMessage, e);
@@ -420,8 +405,7 @@ public class ArduinoManager {
 		return new Status(IStatus.ERROR, Activator.getId(), faileToExtractMessage, e);
 	    }
 	} else if (pArchiveFileName.endsWith("tar.gz")) { //$NON-NLS-1$
-	    try (ArchiveInputStream in = new TarArchiveInputStream(
-		    new GzipCompressorInputStream(new FileInputStream(pArchiveFullFileName)))) {
+	    try (ArchiveInputStream in = new TarArchiveInputStream(new GzipCompressorInputStream(new FileInputStream(pArchiveFullFileName)))) {
 		return extract(in, pInstallPath.toFile(), 1, pForceDownload, pMonitor);
 	    } catch (IOException | InterruptedException e) {
 		return new Status(IStatus.ERROR, Activator.getId(), faileToExtractMessage, e);
@@ -437,8 +421,8 @@ public class ArduinoManager {
 	}
     }
 
-    public static IStatus extract(ArchiveInputStream in, File destFolder, int stripPath, boolean overwrite,
-	    IProgressMonitor pMonitor) throws IOException, InterruptedException {
+    public static IStatus extract(ArchiveInputStream in, File destFolder, int stripPath, boolean overwrite, IProgressMonitor pMonitor)
+	    throws IOException, InterruptedException {
 
 	// Folders timestamps must be set at the end of archive extraction
 	// (because creating a file in a folder alters the folder's timestamp)
@@ -468,7 +452,7 @@ public class ArduinoManager {
 	    Integer mode = null;
 	    Long modifiedTime = new Long(entry.getLastModifiedDate().getTime());
 
-	    pMonitor.subTask("Processing " + name);
+	    pMonitor.subTask("Processing " + name); //$NON-NLS-1$
 
 	    {
 		// Skip MacOSX metadata
@@ -517,8 +501,8 @@ public class ArduinoManager {
 
 	    // Strip the common path prefix when requested
 	    if (!name.startsWith(pathPrefix)) {
-		throw new IOException(Messages.ArduinoManager_no_single_root_folder_while_file + name
-			+ Messages.ArduinoManager_is_outside + pathPrefix);
+		throw new IOException(
+			Messages.ArduinoManager_no_single_root_folder_while_file + name + Messages.ArduinoManager_is_outside + pathPrefix);
 	    }
 	    name = name.substring(pathPrefix.length());
 	    if (name.isEmpty()) {
@@ -529,8 +513,8 @@ public class ArduinoManager {
 	    File outputLinkedFile = null;
 	    if (isLink && linkName != null) {
 		if (!linkName.startsWith(pathPrefix)) {
-		    throw new IOException(Messages.ArduinoManager_no_single_root_folder_while_file + linkName
-			    + Messages.ArduinoManager_is_outside + pathPrefix);
+		    throw new IOException(
+			    Messages.ArduinoManager_no_single_root_folder_while_file + linkName + Messages.ArduinoManager_is_outside + pathPrefix);
 		}
 		linkName = linkName.substring(pathPrefix.length());
 		outputLinkedFile = new File(destFolder, linkName);
@@ -539,8 +523,8 @@ public class ArduinoManager {
 		// Symbolic links are referenced with relative paths
 		outputLinkedFile = new File(linkName);
 		if (outputLinkedFile.isAbsolute()) {
-		    System.err.println(Messages.ArduinoManager_Warning_file + outputFile
-			    + Messages.ArduinoManager_links_to_absolute_path + outputLinkedFile);
+		    System.err.println(
+			    Messages.ArduinoManager_Warning_file + outputFile + Messages.ArduinoManager_links_to_absolute_path + outputLinkedFile);
 		    System.err.println();
 		}
 	    }
@@ -548,16 +532,14 @@ public class ArduinoManager {
 	    // Safety check
 	    if (isDirectory) {
 		if (outputFile.isFile() && !overwrite) {
-		    throw new IOException(Messages.ArduinoManager_Cant_create_folder + outputFile
-			    + Messages.ArduinoManager_File_exists);
+		    throw new IOException(Messages.ArduinoManager_Cant_create_folder + outputFile + Messages.ArduinoManager_File_exists);
 		}
 	    } else {
 		// - isLink
 		// - isSymLink
 		// - anything else
 		if (outputFile.exists() && !overwrite) {
-		    throw new IOException(Messages.ArduinoManager_Cant_extract_file + outputFile
-			    + Messages.ArduinoManager_File_already_exists);
+		    throw new IOException(Messages.ArduinoManager_Cant_extract_file + outputFile + Messages.ArduinoManager_File_already_exists);
 		}
 	    }
 
@@ -623,8 +605,7 @@ public class ArduinoManager {
     }
 
     private static void link(File something, File somewhere) throws IOException, InterruptedException {
-	Process process = Runtime.getRuntime()
-		.exec(new String[] { "ln", something.getAbsolutePath(), somewhere.getAbsolutePath() }, null, null); //$NON-NLS-1$
+	Process process = Runtime.getRuntime().exec(new String[] { "ln", something.getAbsolutePath(), somewhere.getAbsolutePath() }, null, null); //$NON-NLS-1$
 	process.waitFor();
     }
 
